[admin] chore: Set icon for news page

--- a/admin/src/app/layout/news/news.component.html
+++ b/admin/src/app/layout/news/news.component.html
@@ -1,6 +1,5 @@
 <div [@routerTransition]>
-    <app-page-header [heading]="'Tables'" [icon]="'fa-table'"></app-page-header>
+    <app-page-header [heading]="'Parsed news'" [icon]="'fa-newspaper-o'"></app-page-header>
     <div class="row">
-        123
     </div>
 </div>
