--- a/admin/src/app/layout/news/news.component.html
+++ b/admin/src/app/layout/news/news.component.html
@@ -3,36 +3,55 @@
 
     <div class="row">
         <div class="col col-lg-12 col-md-12 col-xs-12 col-sm-12 text-center" *ngIf="totalCount" >
-            <form>
+            <form [formGroup]="rankConfigForm" (ngSubmit)="submitRankConfig()">
                 <div class="form-group row">
-                    <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                        <label for="ex2"><i class="fa fa-facebook"></i></label>
-                        <input class="form-control input-sm" id="ex1" type="number">
+                    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                        <label for="id_fb_shares"><i class="fa fa-facebook"></i></label>
+                        <input class="form-control input-xs" id="id_fb_shares"
+                               type="number" step=".01" formControlName="fb_shares" />
                     </div>
-                    <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                        <label for="ex2"><i class="fa fa-link"></i></label>
-                        <input class="form-control input-sm" id="ex2" type="number">
+                    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                        <label for="id_linkedin_shares"><i class="fa fa-link"></i></label>
+                        <input class="form-control input-xs" id="id_linkedin_shares"
+                               type="number" formControlName="linkedin_shares" />
                     </div>
-                    <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                        <label for="ex3"><i class="fa fa-reddit"></i></label>
-                        <input class="form-control input-sm" id="ex3" type="number">
+                    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                        <label for="id_reddit_up"><i class="fa fa-reddit"></i></label>
+                        <input class="form-control input-xs" id="id_reddit_up"
+                               type="number" step=".01" formControlName="reddit_up" />
                     </div>
-                    <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                        <label for="ex3"><i class="fa fa-eye"></i></label>
-                        <input class="form-control input-sm" id="ex3" type="number">
+                    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                        <label for="id_twitter_shares"><i class="fa fa-twitter"></i></label>
+                        <input class="form-control input-xs" id="id_twitter_shares"
+                               type="number" step=".01" formControlName="twitter_shares" />
                     </div>
-                    <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                        <label for="ex3"><i class="fa fa-comment"></i></label>
-                        <input class="form-control input-sm" id="ex3" type="number">
+                    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                        <label for="id_views"><i class="fa fa-eye"></i></label>
+                        <input class="form-control input-xs" id="id_views"
+                               type="number" step=".01" formControlName="views" />
                     </div>
-                    <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1">
-                        <label for="ex3"><i class="fa fa-clock-o"></i></label>
-                        <input class="form-control input-sm" id="ex3" type="number">
+                    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                        <label for="id_comments"><i class="fa fa-clock-o"></i></label>
+                        <input class="form-control input-xs" id="id_comments"
+                               type="number" step=".01" formControlName="comments" />
+                    </div>
+                    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                        <label for="id_date_elapsed_seconds"><i class="fa fa-clock-o"></i></label>
+                        <input class="form-control input-xs" id="id_date_elapsed_seconds"
+                               type="number" step=".01" formControlName="date_elapsed_seconds" />
+                    </div>
+                    <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
+                        <label for="id_date_coef"><i class="fa fa-calendar"></i></label>
+                        <input class="form-control input-xs" id="id_date_coef"
+                               type="number" step=".01" formControlName="date_coef" />
                     </div>
                 </div>
                 <div class="form-group row">
                     <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
-                        <button class="btn btn-lg btn-success">Save config & update list</button>
+                        <button class="btn btn-xs btn-success" [disabled]="!rankConfigForm.valid">
+                            <i class="fa fa-save"></i>
+                            <b>Save config & update list</b>
+                        </button>
                     </div>
                 </div>
             </form>
@@ -69,7 +88,7 @@
                     </p>
                 </div>
                 <div class="card-footer text-muted">
-                    <button class="btn btn-sm btn-success card-link">
+                    <button class="btn btn-sm btn-info card-link">
                         Quick view <i class="fa fa-eye"></i>
                     </button>
                     <button class="btn btn-sm btn-danger card-link">
