--- a/admin/src/app/layout/news/news.component.scss
+++ b/admin/src/app/layout/news/news.component.scss
@@ -9,3 +9,18 @@
         text-align: center;
     }
 }
+
+.card {
+    margin-bottom: 10px;
+}
+
+.form-rank {
+    .card-header {
+        cursor: pointer;
+        text-align: left;
+    }
+
+    .card-block {
+        padding-bottom: 0;
+    }
+}
