[admin] chore: Changed comments & views fields

--- a/admin/src/app/layout/news/components/news-list/news-list.component.html
+++ b/admin/src/app/layout/news/components/news-list/news-list.component.html
@@ -125,8 +125,8 @@
                                 <td>{{ news.social_data.facebook.share_count }}</td>
                                 <td>{{ news.social_data.linkedin }}</td>
                                 <td>{{ news.social_data.reddit.ups }}</td>
-                                <td>{{ news.social_data.views }}</td>
-                                <td>{{ news.social_data.comments }}</td>
+                                <td>{{ news.views || 0 }}</td>
+                                <td>{{ news.comments || 0 }}</td>
                                 <td>{{ news.time_elapsed }}</td>
                                 <td><b>{{ news.rank }}</b></td>
                             </tr>
