--- a/admin/src/app/layout/news/components/news-list/news-list.component.html
+++ b/admin/src/app/layout/news/components/news-list/news-list.component.html
@@ -2,9 +2,9 @@
     <app-page-header [heading]="'News list'" [icon]="'fa-newspaper-o'"></app-page-header>
 
     <div class="row">
-        <div class="col col-lg-12 col-md-12 col-xs-12 col-sm-12 text-center" *ngIf="totalCount" >
+        <div class="col col-lg-12 col-md-12 col-xs-12 col-sm-12 text-center">
             <div class="card form-rank">
-                <h5 class="card-header" (click)="isRankFormCollapsed = !isRankFormCollapsed">
+                <h5 class="card-header" (click)="collapse()">
                     Coefficients form
                     <i class="fa pull-right"
                        [ngClass]="{'fa-chevron-down': isRankFormCollapsed, 'fa-chevron-up': !isRankFormCollapsed}"></i>
@@ -88,11 +88,24 @@
                         <i class="fa fa-user"></i> {{ news.author }}
                     </p>
                     <p class="card-text" *ngIf="news.tags.length">
-                        <i class="fa fa-tags"></i>
                         <span *ngFor="let tag of news.tags; let last = last;">
                             {{ tag }}
-                            <span *ngIf="!last"> | </span>
+                            <span *ngIf="!last">, </span>
                         </span>
+                    </p>
+                    <p class="card-text">
+                    <span class="card-link">
+                        <i class="fa fa-clock-o"></i>
+                        Publicated: {{ news.pub_date | date:'d MMM h:mm' }}
+                    </span>
+                        <span class="card-link">
+                        <i class="fa fa-clock-o"></i>
+                        Created: {{ news.created | date:'d MMM h:mm' }}
+                    </span>
+                        <span class="card-link">
+                        <i class="fa fa-clock-o"></i>
+                        Updated: {{ news.updated | date:'d MMM h:mm' }}
+                    </span>
                     </p>
                 </div>
                 <div class="card-footer text-muted">
@@ -102,12 +115,10 @@
                     <button class="btn btn-sm btn-danger card-link">
                         Archive <i class="fa fa-archive"></i>
                     </button>
+                    <span class="card-link">{{ news.domain }}</span>
                     <a [href]="news.url_raw" class="card-link" target="_blank">
                         Original
                         <i class="fa fa-link"></i>
-                    </a>
-                    <a [href]="news.domain" class="card-link" target="_blank">
-                        {{ news.domain }}
                     </a>
                     <hr>
                     <div class="table-responsive">
