--- a/admin/src/app/layout/news/components/news-list/news-list.component.scss
+++ b/admin/src/app/layout/news/components/news-list/news-list.component.scss
@@ -24,3 +24,12 @@
         padding-bottom: 0;
     }
 }
+
+.news-data-stub {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+ul.pagination {
+    display: inline-flex !important;
+}
