--- a/admin/src/app/layout/news/components/news-detail/news-detail.component.html
+++ b/admin/src/app/layout/news/components/news-detail/news-detail.component.html
@@ -78,6 +78,6 @@
             </div>
         </div>
 
-        <div [froalaEditor] [(ngModel)]="news.text"></div>
+        <div [froalaEditor]="editorEdit" [(ngModel)]="news.text"></div>
     </div>
 </div>
